--- a/index.html
+++ b/index.html
@@ -120,69 +120,77 @@ async function loadLatestFilms(page = 1) {
   if (!container) return;
   container.innerHTML = "<p style='color:#aaa;'>Завантаження...</p>";
 
-  const { data, error } = await supabase
-    .from("films_site")
-    .select("id, title, poster, type, genre, year, imdb, pro_access")
-    .in("type", ["Фільм", "Мультфільм", "Мультсеріал", "Серіал"])
-    .order("id", { ascending: false })
-    .limit(1000);
+  // 🧠 Отримуємо дані по типах окремо (щоб не брало тільки один серіал)
+  const filmTypes = ["Фільм", "Серіал", "Мультфільм", "Мультсеріал"];
+  let allData = [];
 
-  if (error) {
-    console.error("❌ Помилка завантаження:", error);
-    container.innerHTML = "<p style='color:white;'>Помилка завантаження.</p>";
+  for (const t of filmTypes) {
+    try {
+      const { data, error } = await supabase
+        .from("films_site")
+        .select("id, title, poster, type, genre, year, imdb, pro_access")
+        .eq("type", t)
+        .order("id", { ascending: false })
+        .limit(250); // беремо по 250 кожного типу
+
+      if (error) {
+        console.warn(`⚠️ Помилка при завантаженні типу ${t}:`, error);
+        continue;
+      }
+      if (data?.length) {
+        allData = allData.concat(data);
+      }
+    } catch (err) {
+      console.error(`❌ Помилка для типу ${t}:`, err);
+    }
+  }
+
+  if (!allData.length) {
+    container.innerHTML = "<p style='color:white;'>Немає даних для показу.</p>";
     return;
   }
-// 🧠 НОВИЙ БЛОК: залишаємо лише по одному запису кожної назви
-const all = data.sort((a, b) => b.id - a.id); // спершу сортуємо, щоб новіші були першими
 
-const seen = new Map();
-for (const item of all) {
-  const key = (item.title || "").trim().toLowerCase();
-  if (!seen.has(key)) {
-    seen.set(key, item); // залишаємо тільки найновіший запис
+  // 🔹 Об’єднуємо й сортуємо всі типи
+  const all = allData.sort((a, b) => b.id - a.id);
+
+  // 🧠 Залишаємо лише по одному запису кожної назви
+  const seen = new Map();
+  for (const item of all) {
+    const key = (item.title || "").trim().toLowerCase();
+    if (!seen.has(key)) {
+      seen.set(key, item); // залишаємо тільки найновіший запис
+    }
   }
-}
-const unique = Array.from(seen.values());
-
-
+  const unique = Array.from(seen.values());
 
   // 🔹 Пагінація
-  const perPage = 24; // 6 рядів × 4 картки в ряд
+  const perPage = 24;
   const totalPages = Math.ceil(unique.length / perPage);
   const start = (page - 1) * perPage;
   const currentFilms = unique.slice(start, start + perPage);
-  console.log("🎞 Завантажено:", data.length, " | Унікальних:", unique.length, " | totalPages:", totalPages);
+  console.log("🎞 Завантажено:", allData.length, " | Унікальних:", unique.length);
 
   // 🔹 Вивід карток
   container.innerHTML = "";
   currentFilms.forEach(item => {
     const card = document.createElement("div");
     card.className = "film";
-    // 🟢 Безпечна обробка постера (адаптивно для мобільних)
+
     const rawPoster = item.poster ? item.poster.replace(/^http:\/\//, "https://") : "";
     const isMobile = /Android|iPhone|iPad|iPod/i.test(navigator.userAgent);
-    
-    let proxyPoster = "";
-    if (rawPoster) {
-      // 🟣 На комп'ютері — через Cloudflare-проксі
-      // 🟢 На телефоні — напряму, без проксі (щоб не блокувалось)
-      proxyPoster = isMobile
-        ? rawPoster
-        : `https://uakino-proxy.lyuda14070702.workers.dev?url=${encodeURIComponent(rawPoster)}`;
-    } else {
-      proxyPoster = "https://via.placeholder.com/200x300?text=No+Image";
-    }
+    const proxyPoster = rawPoster
+      ? (isMobile
+          ? rawPoster
+          : `https://uakino-proxy.lyuda14070702.workers.dev?url=${encodeURIComponent(rawPoster)}`)
+      : "https://via.placeholder.com/200x300?text=No+Image";
 
-    
     card.innerHTML = `
       <div class="poster">
-        <img 
-          src="${proxyPoster}" 
-          alt="${item.title}"
-          onerror="this.src='https://via.placeholder.com/200x300?text=No+Image'; this.onerror=null;"
-          loading="lazy"
-          style="width:100%; height:300px; object-fit:cover; display:block;"
-        >
+        <img src="${proxyPoster}" 
+             alt="${item.title}" 
+             loading="lazy"
+             onerror="this.src='https://via.placeholder.com/200x300?text=No+Image'; this.onerror=null;"
+             style="width:100%; height:300px; object-fit:cover; display:block;">
         ${String(item.pro_access || '').toUpperCase() === 'PRO' 
           ? '<span class="badge plus">PRO</span>' 
           : ''}
@@ -209,55 +217,52 @@ const unique = Array.from(seen.values());
   });
 
   // 🔹 Побудова пагінації
- // 🔹 Побудова пагінації з 5 кнопками і стрілками
-const pagination = document.querySelector(".pagination");
-pagination.innerHTML = "";
+  const pagination = document.querySelector(".pagination");
+  pagination.innerHTML = "";
 
-const visibleCount = 5; // показуємо 5 кнопок максимум
-let startPage = Math.max(1, page - Math.floor(visibleCount / 2));
-let endPage = startPage + visibleCount - 1;
-if (endPage > totalPages) {
-  endPage = totalPages;
-  startPage = Math.max(1, endPage - visibleCount + 1);
+  const visibleCount = 5;
+  let startPage = Math.max(1, page - Math.floor(visibleCount / 2));
+  let endPage = startPage + visibleCount - 1;
+  if (endPage > totalPages) {
+    endPage = totalPages;
+    startPage = Math.max(1, endPage - visibleCount + 1);
+  }
+
+  if (page > 1) {
+    const prevBtn = document.createElement("button");
+    prevBtn.textContent = "❮";
+    prevBtn.classList.add("nav-btn");
+    prevBtn.addEventListener("click", () => {
+      loadLatestFilms(page - 1);
+      scrollToTopSmooth();
+    });
+    pagination.appendChild(prevBtn);
+  }
+
+  for (let i = startPage; i <= endPage; i++) {
+    const btn = document.createElement("button");
+    btn.textContent = i;
+    if (i === page) btn.classList.add("active");
+    btn.addEventListener("click", () => {
+      loadLatestFilms(i);
+      scrollToTopSmooth();
+    });
+    pagination.appendChild(btn);
+  }
+
+  if (page < totalPages) {
+    const nextBtn = document.createElement("button");
+    nextBtn.textContent = "❯";
+    nextBtn.classList.add("nav-btn");
+    nextBtn.addEventListener("click", () => {
+      loadLatestFilms(page + 1);
+      scrollToTopSmooth();
+    });
+    pagination.appendChild(nextBtn);
+  }
 }
 
-// ◀️ Кнопка "Назад"
-if (page > 1) {
-  const prevBtn = document.createElement("button");
-  prevBtn.textContent = "❮";
-  prevBtn.classList.add("nav-btn");
-  prevBtn.addEventListener("click", () => {
-    loadLatestFilms(page - 1);
-    scrollToTopSmooth();
-  });
-  pagination.appendChild(prevBtn);
-}
 
-// 🔢 Кнопки сторінок
-for (let i = startPage; i <= endPage; i++) {
-  const btn = document.createElement("button");
-  btn.textContent = i;
-  if (i === page) btn.classList.add("active");
-  btn.addEventListener("click", () => {
-    loadLatestFilms(i);
-    scrollToTopSmooth();
-  });
-  pagination.appendChild(btn);
-}
-
-// ▶️ Кнопка "Вперед"
-if (page < totalPages) {
-  const nextBtn = document.createElement("button");
-  nextBtn.textContent = "❯";
-  nextBtn.classList.add("nav-btn");
-  nextBtn.addEventListener("click", () => {
-    loadLatestFilms(page + 1);
-    scrollToTopSmooth();
-  });
-  pagination.appendChild(nextBtn);
-}
-
-}
 </script>
 
 
@@ -552,6 +557,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
