--- a/film.html
+++ b/film.html
@@ -1023,44 +1023,61 @@ window.addEventListener("DOMContentLoaded", () => {
 async function loadRecommendedFilms(title, genre) {
   const list = document.getElementById("recommendedList");
   if (!list) return;
-
   list.innerHTML = "<p style='color:#777'>Завантаження...</p>";
 
   const cleanTitle = (title || "").trim().replace(/[:\-–,]/g, " ");
-  const baseWord = cleanTitle.split(" ")[0]; // перше слово: Гарфілд
+  const baseWord = cleanTitle.split(" ")[0]; // перше слово (Гарфілд)
 
-  // 🔹 Основний запит — все, що починається з цього слова або містить його
+  // 🔹 Формуємо пошук за назвою + жанром
+  const orParts = [];
+  if (genre) {
+    genre.split(",").map(g => g.trim()).forEach(g => orParts.push(`genre.ilike.%${g}%`));
+  }
+  cleanTitle.split(" ").filter(w => w.length > 2 && !/^\d+$/.test(w))
+    .forEach(k => orParts.push(`title.ilike.%${k}%`));
+
   const { data, error } = await supabase
     .from("films_site")
-    .select("id, title, poster, genre")
-    .or(`title.ilike.%${baseWord}%,genre.ilike.%${genre || ""}%`)
-    .limit(50);
+    .select("id, title, poster, genre, year")
+    .or(orParts.join(","))
+    .limit(60);
 
   if (error || !data?.length) {
     list.innerHTML = "<p style='color:#888'>Схожих фільмів не знайдено</p>";
     return;
   }
 
-  // 🧹 Групуємо по основному слову (Гарфілд)
-  const current = (title || "").toLowerCase().trim();
+  const current = (title || "").trim().toLowerCase();
   const seen = new Set();
-  const unique = data.filter(f => {
-    const t = (f.title || "").toLowerCase();
-    if (!t.includes(baseWord.toLowerCase())) return false;
-    if (t === current) return false;
-    const base = t.split(":")[0].trim(); // щоб Гарфілд і Гарфілд 2 не дублювались
-    if (seen.has(base)) return false;
-    seen.add(base);
-    return true;
-  }).slice(0, 6);
+  const sameSeries = [];
+  const related = [];
+
+  data.forEach(f => {
+    const t = (f.title || "").trim().toLowerCase();
+    if (!t || seen.has(t)) return;
+    seen.add(t);
+
+    // 🔹 Виключаємо лише точний збіг поточного фільму
+    if (t === current) return;
+
+    // 🔹 Якщо обидва мають спільне перше слово — це частина серії
+    if (t.startsWith(baseWord.toLowerCase()) || current.startsWith(baseWord.toLowerCase())) {
+      sameSeries.push(f);
+    } else {
+      related.push(f);
+    }
+  });
+
+  // 🧩 Формуємо результат: спочатку продовження серії, потім інші за жанром
+  const combined = [...sameSeries, ...related].slice(0, 8);
 
   list.innerHTML = "";
-  if (!unique.length) {
+  if (!combined.length) {
     list.innerHTML = "<p style='color:#888'>Схожих фільмів не знайдено</p>";
     return;
   }
 
-  unique.forEach(film => {
+  combined.forEach(film => {
     const item = document.createElement("div");
     item.className = "recommended-item";
     item.innerHTML = `
@@ -1073,7 +1090,6 @@ async function loadRecommendedFilms(title, genre) {
     list.appendChild(item);
   });
 }
-
 
 
 
