--- a/film.html
+++ b/film.html
@@ -1018,77 +1018,60 @@ window.addEventListener("DOMContentLoaded", () => {
   if (id) updateBookmarkBtn(id);
 });
 
-    
-// ===== 🎬 Рекомендовані фільми (двосторонній пошук серій + жанр) =====
+// ===== 🎬 Рекомендовані фільми — пошук за назвою (в обидва боки) =====
 async function loadRecommendedFilms(title, genre) {
   const list = document.getElementById("recommendedList");
   if (!list) return;
   list.innerHTML = "<p style='color:#777'>Завантаження...</p>";
 
-    // 🧠 ДІАГНОСТИКА
-  console.log("🔍 Поточний фільм:", title, "| жанр:", genre);
+  // 🔍 поточна назва
+  const cleanTitle = (title || "").trim();
+  const mainWords = cleanTitle
+    .replace(/[:\-–,]/g, " ")
+    .split(" ")
+    .map(w => w.trim())
+    .filter(w => w.length > 2 && !/^\d+$/.test(w));
 
-
-  const cleanTitle = (title || "").trim().replace(/[:\-–,]/g, " ");
-  const baseWord = cleanTitle.split(" ")[0]; // перше слово: Гарфілд
-
-  // 🔹 Основна функція запиту
-  async function queryFilms(keyword) {
-    const orParts = [];
-    if (genre) {
-      genre.split(",").map(g => g.trim()).forEach(g => orParts.push(`genre.ilike.%${g}%`));
-    }
-    orParts.push(`title.ilike.%${keyword}%`);
-    cleanTitle.split(" ").filter(w => w.length > 2 && !/^\d+$/.test(w))
-      .forEach(k => orParts.push(`title.ilike.%${k}%`));
-
-    const { data, error } = await supabase
-      .from("films_site")
-      .select("id, title, poster, genre, year")
-      .or(orParts.join(","))
-      .limit(60);
-    console.log("📦 Результати запиту для", keyword, ":", data?.length || 0);
-    if (data?.length) console.log(data.map(f => f.title));
-    if (error || !data) return [];
-    return data;
+  // Створюємо список умов для пошуку
+  const orParts = [];
+  mainWords.forEach(word => orParts.push(`title.ilike.%${word}%`));
+  if (genre) {
+    genre.split(",").forEach(g => orParts.push(`genre.ilike.%${g.trim()}%`));
   }
 
-  // 🧩 1️⃣ Пошук за поточним словом
-  const results1 = await queryFilms(baseWord);
+  // 🧩 Запит 1: шукаємо всі фільми, у яких назва містить будь-яке слово з поточного title
+  const { data: forward } = await supabase
+    .from("films_site")
+    .select("id, title, poster, genre, year")
+    .or(orParts.join(","))
+    .limit(60);
 
-  // 🧩 2️⃣ Пошук навпаки — знайти фільми, у яких цей title входить у назву
-  const shortTitle = cleanTitle.split(":")[0].split(" ")[0]; // "Гарфілд"
-  const results2 = await queryFilms(shortTitle);
+  // 🧩 Запит 2: шукаємо фільми, у назві яких МІСТИТЬСЯ поточна назва
+  const { data: backward } = await supabase
+    .from("films_site")
+    .select("id, title, poster, genre, year")
+    .ilike("title", `%${cleanTitle.split(":")[0].trim()}%`)
+    .limit(60);
 
-  // 🔹 Об’єднуємо унікальні результати
-  const all = [...results1, ...results2];
-  const current = (title || "").trim().toLowerCase();
+  // 🧹 Об'єднуємо результати без дублікатів
+  const all = [...(forward || []), ...(backward || [])];
   const seen = new Set();
-  const sameSeries = [];
-  const related = [];
-
-  all.forEach(f => {
+  const current = cleanTitle.toLowerCase();
+  const unique = all.filter(f => {
     const t = (f.title || "").trim().toLowerCase();
-    if (!t || t === current || seen.has(t)) return;
+    if (!t || t === current || seen.has(t)) return false;
     seen.add(t);
-
-    // серії з однаковим коренем (Гарфілд, Гарфілд 2, Гарфілд: ...)
-    if (t.includes(baseWord.toLowerCase())) {
-      sameSeries.push(f);
-    } else {
-      related.push(f);
-    }
+    return true;
   });
 
-  const combined = [...sameSeries, ...related].slice(0, 8);
-
-  list.innerHTML = "";
-  if (!combined.length) {
+  if (!unique.length) {
     list.innerHTML = "<p style='color:#888'>Схожих фільмів не знайдено</p>";
     return;
   }
 
-  combined.forEach(film => {
+  // 🎞️ Виводимо до 8 рекомендацій
+  list.innerHTML = "";
+  unique.slice(0, 8).forEach(film => {
     const item = document.createElement("div");
     item.className = "recommended-item";
     item.innerHTML = `
@@ -1101,6 +1084,7 @@ async function loadRecommendedFilms(title, genre) {
     list.appendChild(item);
   });
 }
+
 
 
 
