--- a/film.html
+++ b/film.html
@@ -1019,7 +1019,7 @@ window.addEventListener("DOMContentLoaded", () => {
 });
 
     // ===== 🎬 Рекомендовані фільми =====
-// === 🎬 Розумний підбір схожих фільмів (виправлений синтаксис) ===
+// === 🎬 Розумний підбір схожих фільмів із транслітом ===
 async function loadRecommendedFilms(title, genre) {
   const list = document.getElementById("recommendedList");
   if (!list) return;
@@ -1027,46 +1027,64 @@ async function loadRecommendedFilms(title, genre) {
 
   const cleanTitle = (title || "").trim().toLowerCase();
 
-  // 🔹 Видаляємо цифри, двокрапки і зайві частини (наприклад, "2:", "частина")
+  // 🔤 Трансліт таблиця (укр ↔ латиниця)
+  const translitMap = {
+    а: "a", б: "b", в: "v", г: "h", ґ: "g", д: "d", е: "e", є: "ye", ж: "zh",
+    з: "z", и: "y", і: "i", ї: "yi", й: "y", к: "k", л: "l", м: "m", н: "n",
+    о: "o", п: "p", р: "r", с: "s", т: "t", у: "u", ф: "f", х: "kh", ц: "ts",
+    ч: "ch", ш: "sh", щ: "shch", ю: "yu", я: "ya"
+  };
+  const transliterate = text => text
+    .split("")
+    .map(ch => translitMap[ch] || ch)
+    .join("");
+
+  // 🧩 Базове слово для пошуку
   const baseWord = cleanTitle
     .replace(/[:\-–]/g, " ")
     .replace(/\b\d+\b/g, "")
     .split(" ")
-    .filter(w => w.length > 2)[0]; // перше осмислене слово (типу "гарфілд")
+    .filter(w => w.length > 2)[0] || "";
+
+  const translitWord = transliterate(baseWord);
 
   if (!baseWord) {
     list.innerHTML = "<p style='color:#888'>Немає даних для пошуку</p>";
     return;
   }
 
-  // 🔎 Отримуємо фільми, де назва або жанр містять це слово
+  // 🧠 Запит у Supabase (українська або транслітована версія)
   const { data, error } = await supabase
     .from("films_site")
     .select("id, title, poster, genre")
-    .or(`title.ilike.%${baseWord}%,genre.ilike.%${genre}%`)
-    .limit(50);
+    .or(`
+      title.ilike.%${baseWord}%,
+      title.ilike.%${translitWord}%,
+      genre.ilike.%${genre}%
+    `)
+    .limit(80);
 
   if (error || !data) {
+    console.error("❌ Помилка пошуку:", error);
     list.innerHTML = "<p style='color:#888'>Помилка або порожній результат</p>";
-    console.error(error);
     return;
   }
 
-  // 🧹 Фільтруємо унікальні назви, відкидаємо поточний
+  // 🧹 Прибираємо дублікатів, виключаємо поточний фільм
   const seen = new Set();
   const current = cleanTitle.toLowerCase();
   const unique = data.filter(f => {
     const name = (f.title || "").trim().toLowerCase();
-    if (!name || seen.has(name) || name === current) return false;
+    if (!name || name === current || seen.has(name)) return false;
     seen.add(name);
-    // беремо лише схожі за основним словом або тим же жанром
     return (
       name.includes(baseWord) ||
+      name.includes(translitWord) ||
       (genre && f.genre && f.genre.toLowerCase().includes(genre.toLowerCase()))
     );
   });
 
-  // 🔝 Відбираємо перші 3–6 штук
+  // 🔝 Відбираємо 3–6 штук
   const selected = unique.slice(0, 6);
   list.innerHTML = "";
 
@@ -1088,6 +1106,7 @@ async function loadRecommendedFilms(title, genre) {
     list.appendChild(item);
   });
 }
+
 
 
 
