--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   <title>KinoSite — Онлайн кінотеатр</title>
   <link rel="stylesheet" href="style.css" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+<link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#00fff2">
+
+<!-- iOS підтримка -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<link rel="apple-touch-icon" href="/icons/icon-512.png">
+
 
 </head>
 <body>
@@ -557,6 +565,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </body>
 </html>
+
 
 
 
