--- a/bookmarks.html
+++ b/bookmarks.html
@@ -85,7 +85,10 @@
       s.src = "footer.js";
       document.body.appendChild(s);
     });
+</script>
 
+  <!-- ✅ Service Worker реєстрація — ставимо ПІСЛЯ усіх скриптів -->
+  <script src="/sw-register.js"></script>
 </body>
 
 </html>
