--- a/collections.html
+++ b/collections.html
@@ -205,7 +205,10 @@ const collections = [
       s.src = "footer.js";
       document.body.appendChild(s);
     });
+</script> <!-- 🟢 ось цього закриваючого тегу не вистачало! -->
 
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+</body>
 
 </body>
 </html>
