--- a/film.html
+++ b/film.html
@@ -1257,6 +1257,8 @@ document.addEventListener("DOMContentLoaded", () => {
 });
 </script>
 
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+</body>
 
 </body>
 </html>
