--- a/index.html
+++ b/index.html
@@ -563,8 +563,12 @@ document.addEventListener("DOMContentLoaded", async () => {
 
 </script>
 
+
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
+</body>
 </body>
 </html>
+
 
 
 
