--- a/multseries.html
+++ b/multseries.html
@@ -896,6 +896,6 @@ async function loadRecommendedCartoons(title, genre) {
 }
 
 </script>
-
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 </body>
 </html>
