--- a/new.html
+++ b/new.html
@@ -232,7 +232,7 @@
       document.body.appendChild(s);
     });
 </script>
-
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 
 </body>
 </html>
