--- a/profile.html
+++ b/profile.html
@@ -1064,7 +1064,7 @@ document.addEventListener("visibilitychange", () => {
   }
 });
 </script>
-
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 
 </body>
 </html>
