--- a/search.html
+++ b/search.html
@@ -193,6 +193,6 @@
       document.body.appendChild(s);
     });
 </script>
-
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 </body>
 </html>
