--- a/series.html
+++ b/series.html
@@ -1292,6 +1292,6 @@ async function loadRecommendedSeries(title, genre) {
 }
 
 </script>
-
+<script src="/sw-register.js"></script> <!-- ✅ Service Worker -->
 </body>
 </html>
