--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="/icon-512.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/icon-512.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
 
 
 <!-- iOS підтримка -->
@@ -577,6 +578,7 @@ document.addEventListener("DOMContentLoaded", async () => {
 </body>
 </body>
 </html>
+
 
 
 
